# blastcam

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  astrometry.c  astrometry.h  camera.c  camera.h  commands.c  commands.h  convolve.c  convolve.h  fits_utils.c  fits_utils.h  heap.c  heap.h  lens_adapter.c  lens_adapter.h  live_image_with_blobs.kst  makeTable.txt  matrix.c  sc_data_structures.h  sc_listen.c  sc_listen.h  sc_send.c  sc_send.h  timer.h
commander/: Makefile  fake_sc.c  sc_commander.c  shared_info.h
config_files/: astrometry.cfg  chrony.conf  ids_peak.conf  rc.local  starcam_software.service  start_sc_soft.sh
scripts/: upload_etc.sh
tests/: .gitignore  Makefile  dummyArray.csv  test_convolve.c  test_fits.c
